--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test": "node test.js"
   },
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "pg": "^7.11.0"
