--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "connect-flash": "^0.1.1",
     "ejs": "^2.5.6",
-    "express": "^4.15.2",
+    "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
+    "express-messages": "^1.0.1",
     "express-session": "^1.16.2",
+    "express-validator": "^6.1.0",
     "pg": "^7.11.0"
   },
   "devDependencies": {
