--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-session": "^1.16.2",
     "express-validator": "^6.1.0",
     "pg": "^7.11.0",
-    "psql": "0.0.1"
+    "psql": "0.0.1",
+    "session-file-store": "^1.3.1"
   },
   "devDependencies": {
     "request": "^2.81.0",
