--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "express-validator": "^6.1.0",
+    "npm": "^6.10.1",
     "pg": "^7.11.0",
     "pokedex-promise-v2": "^3.2.0",
     "psql": "0.0.1",
