--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "connect-flash": "^0.1.1",
     "connect-json-middleware": "^1.0.2",
     "ejs": "^2.6.2",
-    "express": "^4.17.1",
+    "express": "4.17.1",
     "express-session": "^1.16.2",
     "express-validator": "^6.1.0",
     "pg": "^7.11.0",
     "pokedex-promise-v2": "^3.2.0",
     "psql": "0.0.1",
-    "session-file-store": "^1.3.1"
+    "session-file-store": "^1.3.1",
+    "socket.io": "2.2.0"
   },
   "devDependencies": {
     "request": "^2.81.0",
