--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "pokedex-promise-v2": "^3.2.0",
     "psql": "0.0.1",
     "session-file-store": "^1.3.1",
-    "socket.io": "2.2.0"
+    "socket.io": "2.2.0",
+    "socket.io-chat": "0.0.8"
   },
   "devDependencies": {
     "request": "^2.81.0",
